add font folder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>DELISA</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <style>
+        @font-face {
+            font-family: work sans light;
+            src: url(font/WorkSans-Light.ttf);
+        }
         a:hover{
             text-decoration: none;
         }
