--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             font-family: work sans light;
             src: url(font/WorkSans-Light.ttf);
         }
+        @font-face {
+            font-family: playfair display;
+            src: url(font/PlayfairDisplay-Regular.ttf);
+        }
         a:hover{
             text-decoration: none;
         }
