--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         @font-face {
             font-family: playfair display;
-            src: url(font/PlayfairDisplay-Regular.ttf);
+            src: url(font/PlayfairDisplay.ttf);
         }
         a:hover{
             text-decoration: none;
